@@ -1,5 +1,8 @@
 Changes for DateTime::Set
 
+- added a note about how the result of min()/max() is just a copy of the 
+  actual set boundary.  Reported by Ron Hill.
+
 0.19    2003-11-29
 - added more comments on as_list() and count() behaviour on large sets.
   Reported by Rick Frankel (rt ticket 8611)
